[gd_scene load_steps=2 format=3 uid="uid://cq8iux47kari1"]

[ext_resource type="Script" path="res://scenes/ecs/entities/weapon.gd" id="1_qx0ml"]

[node name="Weapon" type="Node3D"]
script = ExtResource("1_qx0ml")

[node name="FireSFX" type="AudioStreamPlayer3D" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="ProjectileSpawnLocation" type="Marker3D" parent="."]

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
